Menu's fixed for those with more than 10 options, now show as a alphabetical select list

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <div id="sidebar">
               <p class="alert alert-info"><strong>Click on a button below to view detailed service breakdown for each region, click the reset button to reset to this chart</strong></p>
                 <div id="Selector" class="hidden"></div>
+                <div id="btn_panel" class=""></div>
             </div>
             <div id="content">
                 <div id="regionCountBarChart" class="svg-container"></div>
@@ -63,8 +64,9 @@
             </div>
         </main>
         <footer>
-            
-        </footer>
+            <h4>All data shown here has been provided by the CQC (Care Quality Commission), available at <a href="https://www.cqc.org.uk/about-us/transparency/using-cqc-data">https://www.cqc.org.uk/about-us/transparency/using-cqc-data</a></h4>
+            <p>Contains public sector information licensed under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0.</a></p>
+            </footer>
     </div>
      <!--Load external Libraries-->
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
