Utils.js reviewed to show/hide back button and reset button, graphs js altered to adjust positioning of the column chart, changes to index.html and styling fixes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <a class="nav-link" href="#" onClick="setView('Region');">Regions</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" onClick="setView('LocalAuthority');">Local Authorities</a>
+                  <a id="LA" class="nav-link" href="#" onClick="setView('LocalAuthority');">Local Authorities</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#" onClick="setView('ServiceTypes');">Service Types</a>
