Fixed chart scrolling over the footer, axis changes to remove decimals showing, remove inner ticks from the axis while trying to get rid of duplicate values

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                 
             </div>
         </main>
-        <footer>
+        <!-- We need the footer to have id so the 'followTo' function has a valid target point -->
+        <footer id="mainfooter">
             <h4>All data shown here has been provided by the CQC (Care Quality Commission), available at <a href="https://www.cqc.org.uk/about-us/transparency/using-cqc-data">https://www.cqc.org.uk/about-us/transparency/using-cqc-data</a></h4>
             <p>Contains public sector information licensed under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0.</a></p>
             </footer>
