--- a/tests/index.html
+++ b/tests/index.html
@@ -5,12 +5,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine-html.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/boot.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        
         <!-- Load Scripts -->
-        <script src="assets/js/graphs.js" type="text/javascript"></script>
-        <script src="assets/js/utils.js" type="text/javascript"></script>
+        <script src="../../assets/js/utils.js" type="text/javascript"></script>
         
         <!-- Load Tests -->
-        <script src="spec/graphsSpec.js" type="text/javascript"></script>
         <script src="spec/utilsSpec.js" type="text/javascript"></script>
     </head>
 </html>
