--- a/tests/index.html
+++ b/tests/index.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         
         <!-- Load Scripts -->
-        <script src="../../assets/js/utils.js" type="text/javascript"></script>
+        <script src="scripts/utilsScript.js" type="text/javascript"></script>
         
         <!-- Load Tests -->
         <script src="spec/utilsSpec.js" type="text/javascript"></script>
